# windows-image-builder

./: CONFIGURING.md  Cargo.toml  README.adoc  README.illumos.md  README.md  create_windows_server_2022_image.sh  imgbuild.env.sample  imgbuild.sh  install_prerequisites.sh  make_unattend.sh
.github/buildomat/: config.toml
.github/buildomat/jobs/: windows-server-2022-build.sh  windows-server-2022-repack.sh  windows-server-2022.sh
.github/workflows/: rust.yml
illumos/: Autounattend.xml  install_prerequisites.sh
illumos/unattend/: Autounattend.xml  OxidePrepBaseImage.ps1  prep.cmd
imgbuild.d/: build_app.sh  build_image.sh  check_system.sh  validate_inputs.sh
linux/unattend/: Autounattend.xml  OxidePrepBaseImage.ps1  prep.cmd
src/: app.rs  autounattend.rs  main.rs  runner.rs  steps.rs  ui.rs  util.rs
src/illumos/: build_installation_disk.rs  create_guest_disk_image.rs  mod.rs
src/linux/: create_guest_disk_image.rs  mod.rs
unattend/: Autounattend.xml  OxidePrepBaseImage.ps1  cloudbase-init-unattend.conf  cloudbase-init.conf  cloudbase-unattend.xml  prep.cmd  specialize-unattend.xml
unattend/illumos/: prep.cmd
