[package]
name = "wimsy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
clap = { version = "4.4.8", features = ["derive", "wrap_help"] }
colored = "2.0.4"
itertools = "0.12.0"
which = "5.0.0"
